--- a/src/app/views/account/favorites/favorites.html
+++ b/src/app/views/account/favorites/favorites.html
@@ -28,7 +28,7 @@
 				{{pro.name}}
 				<div class="col-xs-12 visible-xs action-btn-xs">
 					<button class="btn small-btn secondary-btn">
-						Delete
+						Unfavorite
 					</button>
 					<button class="btn small-btn secondary-btn btn-right" ui-sref="main.equiDetails({id:pro.id})">
 						View
@@ -36,7 +36,7 @@
 				</div>
 			</h4>
 			<button class="pull-right hidden-xs btn small-btn secondary-btn">
-				Delete
+				Unfavorite
 			</button>
 			<button class="pull-right hidden-xs btn small-btn secondary-btn" ui-sref="main.equiDetails({id:pro.id})" style="margin-right: 10px;">
 				View 
