--- a/src/app/style/sass/_base.scss
+++ b/src/app/style/sass/_base.scss
@@ -88,6 +88,7 @@ article, aside, details, figcaption, figure,  footer, header, hgroup, menu, nav,
 .no-display { display: none; }
 .no-float { float: none !important; }
 .no-margin { margin: 0 !important; }
+.no-tmargin {margin-top: 0 !important;}
 .no-padding { padding: 0 !important; }
 .no-lpadding { padding-left: 0 !important; }
 .no-rpadding { padding-right: 0 !important; }
@@ -116,6 +117,7 @@ img.full-width { height: auto; }
 .skin-color { color: $skin-active-color; }
 .default-color { color: inherit !important; }
 .gray-color { color: #9e9e9e !important; }
+.black-color {color: $black-color !important;}
 
 .hotel-color { color: $skin-active-color; }
 .select-color { color: $skin-select-color; }
