--- a/src/app/views/checkout-address/checkout-address.html
+++ b/src/app/views/checkout-address/checkout-address.html
@@ -294,6 +294,12 @@
 			    	<select ng-model="mdl.selectedShipping"  required ng-options="site.id as site.name for site in mdl.allSites " class="form-control"></select>
 		    	</div>
 		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+{{mdl.selectedSite.address1}}
+            {{mdl.selectedSite.address2}}
+            {{mdl.selectedSite.zip_code}}
+            {{mdl.selectedSite.city.name}}
+            {{mdl.selectedSite.state.name}}
+            {{mdl.selectedSite.country.name}}
 		    	</div>
 		    	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 devider devider-bottom"></div>
 		    	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 check-same-address">
