--- a/src/app/views/account/dashboard/dashboard.html
+++ b/src/app/views/account/dashboard/dashboard.html
@@ -8,7 +8,7 @@
 				<div class="fact blue">
 					<div class="numbers counters-box">
 						<dl>
-							<dt class="display-counter" data-value="3200">0</dt>
+							<dt class="display-counter" data-value="3200">{{mdl.rentedCount || 0}}</dt>
 							<dd>Rented</dd>
 						</dl>
 						<i class="icon soap-icon-calendar-check"></i>
