--- a/src/app/style/sass/_variables.scss
+++ b/src/app/style/sass/_variables.scss
@@ -180,3 +180,4 @@ $primary-button-color: $primary-orange-color; // #FA5013;
 $secondary-button-color: $secondary-light-color;
 $grey-button-color: $dark-gray-color;
 $button-color: $primary-orange-color;
+$primary-header-color: #3E3E3E;
