--- a/src/app/views/seller-account/dashboard/dashboard.html
+++ b/src/app/views/seller-account/dashboard/dashboard.html
@@ -5,13 +5,13 @@
 	<div class="row block">
 		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 			<a class="pointerhover">
-				<div class="fact blue">
+				<div class="fact blue dashboard-cards">
 					<div class="numbers counters-box">
 						<dl>
 							<dt class="display-counter" data-value="3200">0</dt>
 							<dd>Rented</dd>
 						</dl>
-						<i class="icon soap-icon-calendar-check"></i>
+						<i class="fa fa-calendar-check-o"></i>
 					</div>
 					<div class="description">
 						<i class="icon soap-icon-longarrow-right"></i>
@@ -22,13 +22,13 @@
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 			<a ui-sref="main.account.jobsites.list" >
-				<div class="fact yellow">
+				<div class="fact yellow dashboard-cards">
 					<div class="numbers counters-box">
 						<dl>
 							<dt class="display-counter" data-value="4509">{{mdl.jobSitesCount}}</dt>
 							<dd>Your Jobsites</dd>
 						</dl>
-						<i class="icon soap-icon-departure"></i>
+						<i class="fa fa-map-marker"></i>
 					</div>
 					<div class="description">
 						<i class="icon soap-icon-longarrow-right"></i>
@@ -39,13 +39,13 @@
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 			<a class="pointerhover">
-				<div class="fact red">
+				<div class="fact red dashboard-cards">
 					<div class="numbers counters-box">
 						<dl>
 							<dt class="display-counter" data-value="3250">{{mdl.favoriteCount || 0}}</dt>
 							<dd>Favourited</dd>
 						</dl>
-						<i class="icon soap-icon-wishlist"></i>
+						<i class="fa fa-heart-o"></i>
 					</div>
 					<div class="description">
 						<i class="icon soap-icon-longarrow-right"></i>
@@ -56,13 +56,13 @@
 		</div>
 		<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
 			<a class="pointerhover">
-				<div class="fact green">
+				<div class="fact green dashboard-cards">
 					<div class="numbers counters-box">
 						<dl>
 							<dt class="display-counter" data-value="1570">0</dt>
 							<dd>Service Tickets</dd>
 						</dl>
-						<i class="icon soap-icon-stories"></i>
+						<i class="fa fa-file-o"></i>
 					</div>
 					<div class="description">
 						<i class="icon soap-icon-longarrow-right"></i>
