buyer dashboard all pages changes

--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -313,7 +313,7 @@ button, a.button {
 }
 button {
   font-size: 0.9167em; font-weight: bold; height: 34px; line-height: 34px;
-  &:hover { background: #E37F1F; }
+  &:hover { background: $primary-hover-color; }
 }
 a.button {
   display: inline-block; background: #797979; font-size: 0.8333em; line-height: 1.8333em; white-space: nowrap; text-align: center;
@@ -341,7 +341,7 @@ button, a.button {
   }
   &.red { background: #e44049; }
   &.light-brown { background: #e6c687; }
-  &.orange { background: #E37F1F; }
+  &.orange { background: $primary-orange-color; }
   &.dull-blue { background: #12a0c3; }
   &.light-orange { background: #f5a77d; }
   &.light-purple { background: #db8df6; }
@@ -587,13 +587,13 @@ blockquote {
 
 /* 2.2.11. Price section */
 .price {
-  color: #E37F1F; font-size: 1.5em; text-transform: uppercase; float: left; text-align: center; line-height: 1; display: block; margin:9px; margin-bottom: 20px;
+  color: $primary-orange-color; font-size: 1.5em; text-transform: uppercase; float: left; text-align: center; line-height: 1; display: block; margin:9px; margin-bottom: 20px;
   small { display: block; color: $primary-color; font-size: 0.6em; margin-bottom: 3px;}
 }
 
 .price-wrapper {
   font-weight: normal; text-transform: uppercase; font-size: 0.8333em; color: inherit; line-height: 1.3333em; margin: 0;
-  .price-per-unit { color: #E37F1F; font-size: 1.4em; padding-right: 5px; }
+  .price-per-unit { color: $primary-orange-color; font-size: 1.4em; padding-right: 5px; }
 }
 
 /* 2.2.12. Time section */
@@ -997,7 +997,7 @@ ol {  }
           &:hover i:before { @include animation(toTopFromBottom, 0.3s, forwards); }
         }
         &.active a, a:hover { color: $heading-color; }
-        a:hover i, &.active a i { color: #fdb714; border-color: #fdb714; }
+        a:hover i, &.active a i { color: $primary-orange-color; border-color: $primary-orange-color; }
         &:last-child.active a { border-bottom: none; }
         &.active a {
           border-right-color: transparent;
@@ -3567,7 +3567,7 @@ ul.search-tabs {
     > .icon { color: $skin-select-color; font-size: 1.5em; float: left; margin-right: 12px; margin-top: 4px; }
     > .message { float: left;
       > i {
-          color: #E37F1F;
+          color: $primary-orange-color;
           font-size: 1.5em;
           float: left;
           margin-right: 12px;
@@ -3972,7 +3972,7 @@ ul.search-tabs {
     }
     .description {
       font-size: 11px; text-transform: uppercase; padding: 0 20px; font-weight: bold; line-height: 3.5em;
-      > .icon { float: right; font-size: 2em; }
+      > .icon { float: right; font-size: 2em; opacity: 1;}
     }
     &.blue {
       background: $primary-header-color;
@@ -4013,7 +4013,12 @@ ul.search-tabs {
   }
   
   .notifications {
-    .icon-box { background: #f5f5f5; font-size: 1em; padding-right: 15px; margin-bottom: 10px; height: auto; &:after { display: table; content: ""; clear: both; } }
+    .recent-activity-div {
+      a {
+        display: block;
+      }
+    }
+    .icon-box { font-size: 1em; padding-right: 15px; margin-bottom: 10px; height: auto; &:after { display: table; content: ""; clear: both; } &:hover {cursor: pointer; background-color: #f5f5f5} }
     .box-title { line-height: 15px; text-transform: none; color: $heading-color; padding: 6px 5px 0 57px; }
     .price { color: $skin-active-color; float: none; text-align: left; display: inline-block; font-size: inherit; margin: 9px 0; }
     .time { line-height: inherit; }
@@ -4026,7 +4031,7 @@ ul.search-tabs {
       background: #fff; margin-bottom: 15px;
       li > a {
         padding: 15px; border-bottom: 1px solid #f5f5f5; display: block;
-        &:hover { background: #f5f5f5; }
+        &:hover { background: #f5f5f5; cursor: pointer;}
       }
       .icon { float: left; margin-right: 15px; font-size: 1.3333em; }
       .price {margin-top: 0; margin-right: 30px; min-width: 70px;}
@@ -6376,7 +6381,7 @@ section {
 }
 
 .orange-text {
-  color: $skin-active-color;
+  color: $primary-orange-color !important;
 }
 
 // button {
@@ -6665,12 +6670,19 @@ section {
 .order-table {
   > tbody {
     > tr {
+      transition: all 0.6s ease;
+      cursor: pointer;
+      &:hover {
+        background-color: #f5f5f5;
+      }
       &:first-child {
         > td {
           border-top: 0;
         }
       }
       > td {
+        vertical-align: middle;
+        border-top: 1px solid #cccccc;
         p {
           color: $black-color;
         }
@@ -6678,6 +6690,9 @@ section {
           margin-left: 39px;
         }
       }
+    }
+    &:last-child {
+      border-bottom: 1px solid #cccccc
     }
   }
 }
