--- a/src/app/views/account/dashboard/dashboard.html
+++ b/src/app/views/account/dashboard/dashboard.html
@@ -143,53 +143,55 @@
 							</a>
 						</li>
 					</ul>
-					<a class="button green full-width">VIEW ALL BOOKINGS</a>
+					<a class="btn all-btn primary-btn full-width">VIEW ALL BOOKINGS</a>
 				</div>
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 seller-dash-noti notifications">
 			<h2 class="heading-text">Notifications</h2>
-			<a>
-				<div class="icon-box style1 fourty-space">
-					<i class="fa fa-exclamation-circle takeoff-effect yellow-bg"></i>
-					<span class="time pull-right">JUST NOW</span>
-					<p class="box-title">Payment Made <span class="price">$120</span></p>
-				</div>
-			</a>
-			<a>
-				<div class="icon-box style1 fourty-space">
-					<i class="fa fa-exclamation-circle blue-bg"></i>
-					<span class="time pull-right">10 Mins ago</span>
-					<p class="box-title">Payment Due <span class="price">$247</span></p>
-				</div>
-			</a>
-			<a>
-				<div class="icon-box style1 fourty-space">
-					<i class="fa fa-suitcase red-bg"></i>
-					<span class="time pull-right">39 Mins ago</span>
-					<p class="box-title">Equipment Left the source <span class="price">Track here</span></p>
-				</div>
-			</a>
-			<a>
-				<div class="icon-box style1 fourty-space">
-					<i class="fa fa-exclamation-circle takeoff-effect yellow-bg"></i>
-					<span class="time pull-right">JUST NOW</span>
-					<p class="box-title">Payment Made <span class="price">$120</span></p>
-				</div>
-			</a>
-			<a>
-				<div class="icon-box style1 fourty-space">
-					<i class="fa fa-exclamation-circle blue-bg"></i>
-					<span class="time pull-right">10 Mins ago</span>
-					<p class="box-title">Payment Due <span class="price">$247</span></p>
-				</div>
-			</a>
-			<a>
-				<div class="icon-box style1 fourty-space">
-					<i class="fa fa-suitcase red-bg"></i>
-					<span class="time pull-right">39 Mins ago</span>
-					<p class="box-title">Equipment Left the source <span class="price">Track here</span></p>
-				</div>
-			</a>
+			<div class="recent-activity recent-activity-div">
+				<a>
+					<div class="icon-box style1 fourty-space">
+						<i class="fa fa-exclamation-circle takeoff-effect yellow-bg"></i>
+						<span class="time pull-right">JUST NOW</span>
+						<p class="box-title">Payment Made <span class="price">$120</span></p>
+					</div>
+				</a>
+				<a>
+					<div class="icon-box style1 fourty-space">
+						<i class="fa fa-exclamation-circle blue-bg"></i>
+						<span class="time pull-right">10 Mins ago</span>
+						<p class="box-title">Payment Due <span class="price">$247</span></p>
+					</div>
+				</a>
+				<a>
+					<div class="icon-box style1 fourty-space">
+						<i class="fa fa-suitcase red-bg"></i>
+						<span class="time pull-right">39 Mins ago</span>
+						<p class="box-title">Equipment Left the source <span class="price">Track here</span></p>
+					</div>
+				</a>
+				<a>
+					<div class="icon-box style1 fourty-space">
+						<i class="fa fa-exclamation-circle takeoff-effect yellow-bg"></i>
+						<span class="time pull-right">JUST NOW</span>
+						<p class="box-title">Payment Made <span class="price">$120</span></p>
+					</div>
+				</a>
+				<a>
+					<div class="icon-box style1 fourty-space">
+						<i class="fa fa-exclamation-circle blue-bg"></i>
+						<span class="time pull-right">10 Mins ago</span>
+						<p class="box-title">Payment Due <span class="price">$247</span></p>
+					</div>
+				</a>
+				<a>
+					<div class="icon-box style1 fourty-space">
+						<i class="fa fa-suitcase red-bg"></i>
+						<span class="time pull-right">39 Mins ago</span>
+						<p class="box-title">Equipment Left the source <span class="price">Track here</span></p>
+					</div>
+				</a>
+			</div>
 		</div>
 	</div>
 	<hr>
