--- a/src/app/views/account/orders/view/view.html
+++ b/src/app/views/account/orders/view/view.html
@@ -1,5 +1,5 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding booking-information travelo-box invoice-details" style="margin-bottom: 0px;">
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoices-btn-col buyer-invoice-btn">
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 invoices-btn-col buyer-invoice-btn no-padding">
 		<button class="btn all-btn primary-btn" ui-sref="main.account.orders.list">
 			<i class="fa fa-chevron-left"></i> &nbsp
 			Back to Order List
