--- a/src/app/views/checkout-address/checkout-address.html
+++ b/src/app/views/checkout-address/checkout-address.html
@@ -265,12 +265,12 @@
 			<li class="active">
 				<span class="bubble"></span>
 				<span class="active-bubble"></span>
-				<p>1. Delivery</p>
+				<p><a ui-sref="main.checkoutAddress">1. Delivery</a></p>
 			</li>
 			<li class="">
 				<span class="bubble"></span>
 				<span class="active-bubble"></span>
-				<p>2. Payment</p>
+				<p><a ui-sref="main.payment">2. Payment</a></p>
 			</li>
 			<li class="">
 				<span class="bubble"></span>
@@ -293,13 +293,19 @@
 		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 			    	<select ng-model="mdl.selectedShipping"  required ng-options="site.id as site.name for site in mdl.allSites " class="form-control"></select>
 		    	</div>
-		    	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-{{mdl.selectedSite.address1}}
-            {{mdl.selectedSite.address2}}
-            {{mdl.selectedSite.zip_code}}
-            {{mdl.selectedSite.city.name}}
-            {{mdl.selectedSite.state.name}}
-            {{mdl.selectedSite.country.name}}
+		    	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		    		<p class="no-margin" ng-if="mdl.selectedSite.address1">
+						{{mdl.selectedSite.address1}}, <span ng-if="mdl.selectedSite.address2">{{mdl.selectedSite.address2}},</span>
+		    		</p>
+		    		<p class="no-margin" ng-if="mdl.selectedSite.city.name">
+		            	{{mdl.selectedSite.city.name}}, {{mdl.selectedSite.state.name}},
+		    		</p>
+		    		<p class="no-margin" ng-if="mdl.selectedSite.country.name">
+		            	{{mdl.selectedSite.country.name}}
+		    		</p>
+		    		<p class="no-margin" ng-if="mdl.selectedSite.zip_code">
+		            	Zip code: {{mdl.selectedSite.zip_code}}
+		    		</p>
 		    	</div>
 		    	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 devider devider-bottom"></div>
 		    	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 check-same-address">
@@ -515,7 +521,7 @@
 	</div>
 </div>
 <div class="sidebar col-lg-3 col-md-3 col-sm-3 hidden-xs">
-		<div class="booking-details travelo-box no-lpadding no-rpadding">
+		<div class="booking-details travelo-box no-lpadding no-rpadding summary-div">
 				<h4 style="padding: 0 10px;">Cart Summary</h4>
 				<article class="tour-detail cart-summary">
 						<figure ui-sref="main.equiDetails({id:item.product.id})" ng-repeat="item in mdl.cartData.rental_products" class="clearfix ">
@@ -523,7 +529,11 @@
 										<img ng-src="{{(item.product.image) || 'http://placehold.it/124x78'}}" alt="">
 								</a>
 								<div class="travel-title">
-										<h5 class="box-title">{{item.product.name}} <small>${{item.cost_breakup.subtotal.amt}}</small></h5>
+										<h5 class="box-title">{{item.product.name}} 
+											<p>${{item.cost_breakup.subtotal.amt}}
+												<lable class="pull-right">Qty: {{item.qty}}</lable>
+											</p>
+										</h5>
 								</div>
 						</figure>
 				</article>
@@ -534,13 +544,13 @@
 				</dl>
 		</div>
 
-		<div class="travelo-box contact-box">
+		<div class="travelo-box contact-box summary-contact">
 				<h4>Need Marketplace Help?</h4>
 				<p>We would be more than happy to help you. Our team advisor are 24/7 at your service to help you.</p>
 				<address class="contact-details">
 						<span class="contact-phone"><i class="soap-icon-phone"></i> 1-800-123-HELLO</span>
 						<br>
-						<a class="contact-email" href="#">help@marketplace.com</a>
+						<a class="contact-email no-padding" href="mailto:help@marketplace.com" target="_blank">help@marketplace.com</a>
 				</address>
 		</div>
 </div>
