--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -5380,11 +5380,14 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
       cursor: pointer;
       transition: background-color 0.6s ease;
       &:hover {
-        background-color: #FFF7F7;
+        background-color: #f5f5f5;
+      }
+      &:first-child {
+        border-top: 1px solid #cccccc;
       }
       > td {
         border-top: 0;
-        border-bottom: 1px solid $primary-border-color;
+        border-bottom: 1px solid #cccccc;
         // border-right: 1px solid $primary-border-color;
         padding-top: 15px;
         padding-bottom: 15px;
@@ -5421,6 +5424,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
       }
       .time-td{
         padding-left: 15px;
+        vertical-align: middle;
         .time-util {
           margin-bottom: 10px;
         }
