--- a/src/app/views/seller-account/inventory/list/list.html
+++ b/src/app/views/seller-account/inventory/list/list.html
@@ -22,7 +22,7 @@
       </select>
 		</p>
 	</div>
-	<div class="col-lg-12 col-md-12 col-sm-12 hidden-xs">
+	<div class="col-lg-12 col-md-12 col-sm-12 hidden-xs no-padding">
 		<table class="table equipments-table">
 			<tbody>
 				<tr ng-repeat="inv in mdl.inventories">
