--- a/src/app/views/account/jobsites/add/add.html
+++ b/src/app/views/account/jobsites/add/add.html
@@ -1,4 +1,7 @@
-<div class="add-equipment col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding" load-indicator>
+<div class="loader-div" loader>
+    <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
+</div>
+<div class="add-equipment col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 	<form validate-form name="mdl.form" novalidate ng-submit="updateProfile()" class="edit-profile-form buyer-add-jobsite">
 		<h1 class="no-margin skin-color seller-heading-font">{{editMode ? 'Edit Jobsite' :'Add New Jobsite'}}</h1>
 		<!-- <h2>{{editMode ? 'Edit Jobsite' :'Add New Jobsite'}}</h2> -->
