--- a/src/app/views/account/inquiries/list/list.html
+++ b/src/app/views/account/inquiries/list/list.html
@@ -1,3 +1,6 @@
+<div class="loader-div" loader>
+    <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
+</div>
 <!-- <div class="booking-information travelo-box" style="margin-bottom: 0px; padding: 20px 30px 1px;"> -->
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header search-col no-padding">
 	<h1 class="no-margin skin-color seller-heading-font">Enquiries</h1>
