--- a/src/app/views/account/invoices/list/list.html
+++ b/src/app/views/account/invoices/list/list.html
@@ -1,3 +1,6 @@
+<div class="loader-div" loader>
+    <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
+</div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 seller-header search-col no-padding">
 	<h1 class="no-margin skin-color seller-heading-font">Invoices</h1>
 	<div class="search-sort-div hide-search hidden-xs" ng-class="{'show-search': searchOpen}">
