--- a/src/app/views/seller-account/settings/general/general.html
+++ b/src/app/views/seller-account/settings/general/general.html
@@ -1,3 +1,6 @@
+<div class="loader-div" loader>
+    <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
+</div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 	<form novalidate name="generalMdl.form" validate-form class="general-setting">
 		<label class="inline-block">Minimum Contract Period</label>
