--- a/src/app/views/seller-account/settings/shipping/shipping.html
+++ b/src/app/views/seller-account/settings/shipping/shipping.html
@@ -1,3 +1,6 @@
+<div class="loader-div" loader>
+    <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
+</div>
 <h5 class="skin-color">Standard Method</h5>
 <div class="row form-group no-bmargin hidden-xs hidden-sm">
 	<div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
