--- a/src/app/views/seller-account/inquiries/view/view.html
+++ b/src/app/views/seller-account/inquiries/view/view.html
@@ -1,3 +1,6 @@
+<div class="loader-div" loader>
+    <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
+</div>
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding booking-information travelo-box" style="margin-bottom: 0px;">
 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding booking-confirmation clearfix">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding message">
