--- a/src/app/views/seller-account/inventory/add/add.html
+++ b/src/app/views/seller-account/inventory/add/add.html
@@ -39,10 +39,9 @@
 				</div>
 			</div>
 			<hr>
-			<br />
-			<div class="from-group block">
+			<div class="from-group block text-right">
+				<button class="btn all-btn secondary-btn" ui-sref="main.sellerAccount.inventory.list">Cancel</button>
 				<button type="submit" class="btn all-btn primary-btn">Save Inventory</button>
-				<button class="btn all-btn primary-btn" ui-sref="main.sellerAccount.inventory.list">Cancel</button>
 			</div>
 		</div>
 	</form>
