--- a/src/app/views/seller-account/orders/process/process.html
+++ b/src/app/views/seller-account/orders/process/process.html
@@ -1,3 +1,6 @@
+<div class="loader-div" loader>
+    <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
+</div>
 <h2>Process Order</h2>
 <ul class="progress-indicator">
     <li ng-class="{'completed':mdl.currentStatusIndex>=1}">
