--- a/src/app/views/seller-account/settings/additional-charges/additional-charges.html
+++ b/src/app/views/seller-account/settings/additional-charges/additional-charges.html
@@ -1,3 +1,6 @@
+<div class="loader-div" loader>
+    <img src="assets/images/loader.gif" style="height: 100px; width:100px"/>
+</div>
 <h5 class="skin-color">Additional Charges</h5>
 <div class="row visible-xs visible-sm" ng-repeat="charge in chargesMdl.charges">
     <div class="col-xs-12">
